Add git ignore and readme Fix minor color mistake

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,6 +2,9 @@ name: SkyblockZ
 version: ${project.version}
 main: com.dhiep.skyblockz.SkyblockZ
 load: STARTUP
+depend:
+  - SlimeWorldManager
+  - WorldGuard
 authors: [dhiep]
 description: A Skyblock Plugin!
 
